# Eclipse-Claw

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.ci  README.md  SKILL.md  docker-compose.yml  env.example  glama.json  proxies.example.txt  setup.sh
.github/workflows/: deps.yml  release.yml
benchmarks/: README.md
crates/eclipse-claw-cdp/: Cargo.toml
crates/eclipse-claw-cdp/src/: client.rs  error.rs  lib.rs  scripts.rs  tokens.rs
crates/eclipse-claw-cli/: Cargo.toml
crates/eclipse-claw-cli/src/: cloud.rs  main.rs
crates/eclipse-claw-core/: Cargo.toml
crates/eclipse-claw-core/src/: lib.rs
crates/eclipse-claw-fetch/: Cargo.toml
crates/eclipse-claw-fetch/src/: browser.rs  client.rs  crawler.rs  document.rs  error.rs  lib.rs  linkedin.rs  reddit.rs  sitemap.rs  tls.rs
crates/eclipse-claw-llm/: Cargo.toml
crates/eclipse-claw-llm/src/: chain.rs  lib.rs  testing.rs
crates/eclipse-claw-llm/src/providers/: anthropic.rs  deepseek.rs  mod.rs  ollama.rs  openai.rs
crates/eclipse-claw-mcp/: Cargo.toml
crates/eclipse-claw-mcp/src/: cloud.rs  main.rs  server.rs
crates/eclipse-claw-pdf/: Cargo.toml
crates/eclipse-claw-pdf/src/: lib.rs
crates/eclipse-claw-server/: Cargo.toml
crates/eclipse-claw-server/src/: error.rs  handlers.rs  main.rs  routes.rs  state.rs
deploy/: hetzner.sh
examples/: README.md
