[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.3.9"
edition = "2024"
license = "AGPL-3.0"
repository = "https://github.com/PavelHopson/eclipse-claw"

[workspace.dependencies]
eclipse-claw-core = { path = "crates/eclipse-claw-core" }
eclipse-claw-fetch = { path = "crates/eclipse-claw-fetch" }
eclipse-claw-llm = { path = "crates/eclipse-claw-llm" }
eclipse-claw-pdf = { path = "crates/eclipse-claw-pdf" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"

