[package]
name = "eclipse-claw-cdp"
description = "Chrome DevTools Protocol integration for eclipse-claw — extracts design tokens via getComputedStyle()"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
eclipse-claw-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chromiumoxide = { version = "0.7", default-features = false, features = ["async-std-runtime"] }
futures = "0.3"
url = "2"

[dev-dependencies]
tokio = { workspace = true }
