[package]
name = "eclipse-claw-cli"
description = "CLI for extracting web content into LLM-optimized formats"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "eclipse-claw"
path = "src/main.rs"

[dependencies]
eclipse-claw-core = { workspace = true }
eclipse-claw-cdp = { workspace = true }
eclipse-claw-fetch = { workspace = true }
eclipse-claw-llm = { workspace = true }
eclipse-claw-pdf = { workspace = true }
dotenvy = { workspace = true }
rand = "0.8"
serde_json = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
regex = "1"
url = "2"
