[package]
name = "eclipse-claw-mcp"
description = "MCP server for eclipse-claw web extraction toolkit"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "eclipse-claw-mcp"
path = "src/main.rs"

[dependencies]
eclipse-claw-core = { workspace = true }
eclipse-claw-fetch = { workspace = true }
eclipse-claw-llm = { workspace = true }
eclipse-claw-pdf = { workspace = true }
rmcp = { version = "1.2", features = ["server", "macros", "transport-io", "schemars"] }
schemars = "1.0"
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "2"
dirs = "6.0.0"
